--- a/app/globals.css
+++ b/app/globals.css
@@ -33,7 +33,7 @@
 }
 
 @utility w-page {
-  @apply mx-auto w-full max-w-6xl px-4 sm:px-6 lg:px-8;
+  @apply mx-auto w-full max-w-6xl px-4;
 }
 
 @layer components {
