--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,14 @@
   @apply mx-auto w-full max-w-6xl px-4;
 }
 
+@utility text-subtle {
+  @apply text-base-content/70;
+}
+
+@utility text-subtler {
+  @apply text-base-content/50;
+}
+
 @layer components {
   /* Some useful defaults */
   h1 {
